@@ -6,7 +6,6 @@ import com.unla.ghsicilianotfi.entities.Person;
 import com.unla.ghsicilianotfi.services.IPersonService;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -25,12 +24,13 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("/api/v1/persons")
 public class PersonRestController {
 
-    private IPersonService personService;
+  private final IPersonService personService;
 
-    private ModelMapper modelMapper = new ModelMapper();
+  private final ModelMapper modelMapper;
 
-    public PersonRestController(IPersonService personService){
+  public PersonRestController(IPersonService personService, ModelMapper modelMapper){
         this.personService = personService;
+      this.modelMapper = modelMapper;
     }
 
     @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
@@ -38,26 +38,20 @@ public class PersonRestController {
         return new ResponseEntity<>(
                 personService.getAll().stream()
                         .map(person -> modelMapper.map(person, PersonDTO.class))
-                        .collect(Collectors.toList())
+                .toList()
                 ,HttpStatus.OK);
     }
 
     @GetMapping(value = "/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<PersonDTO> getPersonById(@PathVariable(name = "id") int id)
-            throws Exception {
+      public ResponseEntity<PersonDTO> getPersonById(@PathVariable(name = "id") int id) {
     	Optional<Person> personOptional = personService.findById(id);
-        if (personOptional.isPresent()) {
-            return new ResponseEntity<>(
-                    modelMapper.map(personOptional.get(), PersonDTO.class),
-                    HttpStatus.OK);
-        } else {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-        }
+        return personOptional
+            .map(person -> new ResponseEntity<>(modelMapper.map(person, PersonDTO.class), HttpStatus.OK))
+            .orElseGet(() -> new ResponseEntity<>(HttpStatus.NOT_FOUND));
     }
 
     @GetMapping(value = "/name", produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<PersonDTO> getPersonByName(@RequestParam(value = "name") String name)
-            throws Exception {
+      public ResponseEntity<PersonDTO> getPersonByName(@RequestParam(value = "name") String name) {
         return new ResponseEntity<>(
                 modelMapper.map(personService.findByName(name), PersonDTO.class)
                 ,HttpStatus.OK);
@@ -73,22 +67,21 @@ public class PersonRestController {
     }
 
     @PutMapping(consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<PersonDTO> putPerson(@RequestBody PersonDTO personDTO) throws Exception {
+      public ResponseEntity<PersonDTO> putPerson(@RequestBody PersonDTO personDTO) {
     	Optional<Person> person = personService.findById(personDTO.getId());
-    	if(person.isPresent()) {
-	        person.get().setName(personDTO.getName());
-	        person.get().setBirthdate(personDTO.getBirthdate());
-	        return new ResponseEntity<>(
-	                modelMapper.map(personService.insertOrUpdate(person.get()),PersonDTO.class)
-	                , HttpStatus.OK);
-    	} else {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-        }
+        return person
+            .map(existing -> {
+              existing.setName(personDTO.getName());
+              existing.setBirthdate(personDTO.getBirthdate());
+              return new ResponseEntity<>(
+                  modelMapper.map(personService.insertOrUpdate(existing), PersonDTO.class),
+                  HttpStatus.OK);
+            })
+            .orElseGet(() -> new ResponseEntity<>(HttpStatus.NOT_FOUND));
     }
 
     @DeleteMapping(value = "/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<String> deletePersonById(@PathVariable(name = "id") int id)
-            throws Exception {
+      public ResponseEntity<String> deletePersonById(@PathVariable(name = "id") int id) {
         return new ResponseEntity<>(
                 "Deleted Person with Id " + id + " : " + personService.remove(id)
                 ,HttpStatus.OK);
